Faster and more accurate mosaic stitching